mobile browser fix with change to html body with and overflow-x

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,13 @@
+html {
+  width: auto!important;
+  overflow-x: hidden!important;
+}
 body {
-  display: inline-block;
   background-color: #98ccd3;
   margin: 0 auto;
-  width: 100%;
+  width: auto!important;
+  overflow-x: hidden!important;
   background-position: top left;
-  overflow: auto;
 }
 
 h1 {
